[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-estimation"
version = "0.1.0"
description = "Efficient estimation of quantum observables via commuting Pauli grouping"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jasmin Pelletier", email = "pelletierjasmin7@gmail.com"}
]

keywords = ["quantum", "estimation", "pauli", "commutation", "variational"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "networkx>=2.6",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "qiskit-ibm-runtime>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
]
notebook = [
    "jupyter>=1.0",
    "jupyterlab>=3.0",
    "ipython>=7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/advanced-estimation"
Documentation = "https://github.com/yourusername/advanced-estimation#readme"
Repository = "https://github.com/yourusername/advanced-estimation.git"
Issues = "https://github.com/yourusername/advanced-estimation/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["advanced_estimation*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=advanced_estimation"